tests/negative/semantics/immutable_reassign.stream
// EXPECT: Error
let x = 10;
x = 20; // ERROR: x is immutable